--- a/overview.tex
+++ b/overview.tex
@@ -5,21 +5,23 @@
 \begin{figure}[t]
   \centering
 % Define block styles
-\tikzstyle{block} = [rectangle, draw, fill=none, 
+    \tikzstyle{block} = [rectangle, draw, fill=none, 
     text centered, sharp corners, minimum height=3em]
 \tikzstyle{line} = [draw, -latex']
     
-\begin{tikzpicture}[node distance = 7em, auto]
+\begin{tikzpicture}[node distance = 8em, auto]
     % Place nodes
+    \draw [fill=gray!20, opacity=1] (-4,-5) rectangle (4,-3);
     \node [block](hofu) {select HO functions};
     \node [block, above left of=hofu] (libraries) {standard libraries};
     \node [block, above right of=hofu] (API) {user definded functions};
-    \node [block, below of=hofu, node distance=5em] (refty) {assigning refinement types};
-    \node [block, below of=refty, node distance=5em] (engine) {synthesis engine};
-    \node [block, left of=engine, node distance=7em] (examples) {examples};
-    \node [block, right of=engine, node distance=7em] (program) {program};
+    \node [block, below of=hofu, node distance=6em] (refty) {assigning refinement types};
+    \node [block, below of=refty, node distance=6em] (engine) {synthesis engine};
+    \node [block, left of=engine, node distance=8em] (examples) {examples};
+    \node [block, right of=engine, node distance=8em] (program) {program};
 
-    
+%Online Flow
+
     % Draw edges
     \path [line] (libraries) -- (hofu);
     \path [line] (API) -- (hofu);
@@ -27,6 +29,7 @@
     \path [line] (refty) -- (engine);
     \path [line] (examples) -- (engine);
     \path [line] (engine) -- (program);
+
 \end{tikzpicture}
   \caption{High-level structure of the algorithm.}
   \label{fig:high_level_overview}
