--- a/myBib.bib
+++ b/myBib.bib
@@ -36,6 +36,52 @@
   year      = {2013}
 }
 
+@article{ dblp1683325,
+  title = {Program Synthesis from Polymorphic Refinement Types},
+  author = {Nadia Polikarpova and Armando Solar-Lezama},
+  author_short = {Polikarpova, N. and Solar-Lezama, A.},
+  bibtype = {article},
+  type = {article},
+  year = {2015},
+  key = {dblp1683325},
+  id = {dblp1683325},
+  biburl = {http://www.dblp.org/rec/bibtex/journals/corr/PolikarpovaS15},
+  url = {http://arxiv.org/abs/1510.08419},
+  journal = {CoRR},
+  volume = {abs/1510.08419},
+  text = {CoRR abs/1510.08419 (2015)}
+}
+
+@misc{GHC,
+  title = {GHC Base Prelude},
+  howpublished = {\url{http://hackage.haskell.org/package/base-4.8.1.0/docs/src/Data.Foldable.html#concatMapm}},
+  note = {Accessed: 2015-11-15}
+}
+
+@inproceedings{icse,
+  author = {Sumit Gulwani and
+            Mikael Mayer and
+            Filip Niksic and
+            Ruzica Piskac},
+  year = {2015},
+  title = {StriSynth: Synthesis for Live Programming},
+  booktitle = {{ICSE}}
+}
+
+@article{GulwaniHS12,
+  author    = {Sumit Gulwani and
+               William R. Harris and
+               Rishabh Singh},
+  title     = {Spreadsheet data manipulation using examples},
+  journal   = {Commun. {ACM}},
+  volume    = {55},
+  number    = {8},
+  pages     = {97--105},
+  year      = {2012},
+  timestamp = {Fri, 07 Sep 2012 09:00:32 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/cacm/GulwaniHS12},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 @inproceedings{DBLP:conf/icfp/VazouSJVJ14,
   author    = {Niki Vazou and
