Updates from ShareLaTeX

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,3 +1,4 @@
 \section{Conclusions}
 \label{conclusions}
 
+Even for novice users, basic programming skills are becoming more commonplace, and synthesis tools must be able to provide users access to code.
