--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 % known bug: http://tex.stackexchange.com/questions/1522/pdfendlink-ended-up-in-different-nesting-level-than-pdfstartlink
 \newcommand{\doi}[1]{doi:~\href{http://dx.doi.org/#1}{\Hurl{#1}}}   % print a hyperlinked DOI
 
-
+\usepackage{array,multirow,graphicx}
 \usepackage[usenames,dvipsnames]{color}
 \usepackage[latin1]{inputenc}
 \usepackage{tikz}
