--- a/eval.tex
+++ b/eval.tex
@@ -18,42 +18,42 @@ In Section \ref{sec:related}, we will discuss why, even if we had completeness, 
 
 \begin{table*}[t]
   \centering
-  \begin{tabular}{|c|l|l|l|l|}
+  \begin{tabular}{|c|l|c|l|l|l|}
     \hline
-    & Test Name & Runtime & Imports & Generated Function \\
+    & Name & Time (s) & Imports & Example & Generated Function \\
     \hline
-    \parbox[t]{2mm}{\multirow{3}{*}{\rotatebox[origin=c]{90}{Bool}}}
-    & and & 4.07 &  &  \\
-    & or  & 1.93 &  &  \\
-    & xor & 8.96 &  &  \\
-    \hline
-    
-    & map (not)        & 7.06   &  &  \\
+    \parbox[t]{2mm}{\multirow{4}{*}{\rotatebox[origin=c]{90}{Bool}}}
+    & and & 2.02 & Prelude & [True, False] $:\to$ False & all id \\
+    & and-2 & 5.52 & Prelude & [True, False] $:\to$ False & foldl min True \\
+    & or  & 3.95 & Prelude & [True, False] $:\to$ True & any id \\
+    & xor & 5.59 & Prelude & [True, False, True] $:\to$ False & foldl xor False \\
     \hline
     
-    or  & any (id)      & 3.72   &  &  \\
-        & foldl1 (max)  & 4.37   &  &  \\
-        & foldr1 (max)  & 4.45   &  &  \\
+    \parbox[t]{2mm}{\multirow{4}{*}{\rotatebox[origin=c]{90}{Tree (u.d.)}}}
+    & double vals & 3.35 & Prelude & ((1) 3 (2)) $:\to$ ((2) 6 (4)) & mapBTree (*2) \\
+    & tree id & 2.49 & Prelude & ((1) 3 ((4) 5 (6))) $:\to$ ((1) 3 ((4) 5 (6))) & mapBTree id \\
+    & tree max & 2.95 & Prelude & ((1 10) 5) $:\to$ 10 & accumTree max 0 \\
+    & tree sum & 2.93 & Prelude & ((3 1) 2) $:\to$ 6 & accumTree (+) 0 \\
     \hline
     
-    and & all (id)      & 2.36   &  &  \\
-        & foldl1 (min)  & 4.53   &  &  \\
-        & foldr1 (min)  & 4.57   &  &  \\
+    \parbox[t]{2mm}{\multirow{10}{*}{\rotatebox[origin=c]{90}{List}}}
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Data.List & [] $:\to$ [] & \\
     \hline
     
-    and & foldl  (add) (0)   & 1.68   &  &  \\
-        & foldl' (add) (0)   & 7.56   &  &  \\
-        & foldr  (add) (0)   & 13.95  &  &  \\
-        & foldr' (add) (0)   & 19.94  &  &  \\
+    \parbox[t]{2mm}{\multirow{4}{*}{\rotatebox[origin=c]{90}{Etc.}}}
+    &  & 0.00 & Prelude, Data.Map & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Euterpea & [] $:\to$ [] & \\
+    &  & 0.00 & Prelude, Euterpea & [] $:\to$ [] & \\
     \hline
-    
-        & mapBTree (id)      & 2.18   &  &  \\
-    \hline
-
-    & foldl (count) (0)  & 1.67   &  &  \\
-    \hline
-
-    &  concatMap (replicate (2))  & 1.82   &  &  \\
   \end{tabular}
   \caption{Benchmarks and Performance Measures}
   \label{tab:benchmarks}
